almost completely functional, need to fix panel-body div spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,3 +14,7 @@
     margin: 1%;
 
 }
+
+body{
+    background-image: url("../images/giphy_logo.png ")
+}
